kubernetes/apps/production/audiobookshelf/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: audiobookshelf
  namespace: apps
  annotations:
    traefik.ingress.kubernetes.io/router.entrypoints: websecure
    cert-manager.io/cluster-issuer: letsencrypt-production-cloudflare
spec:
  ingressClassName: traefik
  tls:
    - hosts:
        - audiobookshelf.ninjatronics.io
      secretName: audiobookshelf-ninjatronics-io-tls
  rules:
    - host: audiobookshelf.ninjatronics.io
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: audiobookshelf
                port:
                  number: 3005
